namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: test-istio
  labels:
    istio-injection: enabled
