destination-rule.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: test-istio-destination-rule-1
  namespace: test-istio
spec:
  host: svc-nginx-test-istio
  subsets:
  - name: nginx
    labels:
      version: v1.0
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: test-istio-destination-rule-2
  namespace: test-istio
spec:
  host: svc-apache-test-istio
  subsets:
  - name: apache
    labels:
      version: v1.0.0
